heavy-delivery/src/main/openshift/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heavy-delivery
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: delivery
    spec:
      containers:
      - name: heavy-delivery-v1
        image: quay.io/gbaufake/heavy-delivery:v1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
