heavy-delivery/src/main/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery
  namespace: 
  labels:
    app: delivery
    service: delivery
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: delivery
