heavy-delivery/src/main/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: delivery-route
spec:
  path: /
  to:
    kind: Service
    name: delivery
    weight: 100
  port:
    targetPort: http
